--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "aos": "^3.0.0-beta.6",
+    "my-project": "^0.0.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
   }
